# voiceover

./: LICENSE  README.md  f5-tts.txt  pyproject.toml
voiceover/: generate.py  sample.py  transcript.py
