[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your_project_name"
version = "0.1.0"
description = "A short description of your project"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
dependencies = [
    "f5-tts-mlx @ git+https://github.com/tikikun/f5-tts-mlx-quantized.git"
]
