[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voiceover"
version = "0.1.0"
description = "Create AI generated comprehensive voice over for your blog post, locally!"
authors = [
    { name="Alan Dao", email="contact@daogiatuan.com" }
]

dependencies = [
    "f5-tts-mlx @ git+https://github.com/tikikun/f5-tts-mlx-quantized.git",
    "mlx-lm",
    "bs4==0.0.1",
    "html2text==2020.1.16",
    "requests==2.31.0",
    "selenium==4.16.0",
    "tqdm==4.66.1",
    "webdriver_manager==4.0.1",
    "Markdown==3.6",
    "strip_markdown"
]

[project.scripts]
voiceover = "voiceover.generate:main"
